<resources>
    <string name="app_name">GS-AgroGenius</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Theme</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mercado_virtual">Virtual Market</string>
    <string name="diagn_stico_de_cultivo">Crop Diagnosis</string>
    <string name="previs_o_de_safra">Crop Forecast</string>
    <string name="diagn_title">Crop Diagnosis</string>
    <string name="diagn_button">diagnosis result</string>
    <string name="diagn_text">Use your smartphone\'s camera to take a photo of the crop you want to analyze and then click the button below.</string>
    <string name="diagn_resul_title">Crop Diagnosis</string>
    <string name="diagn_resul_text1">Leaf condition analysis: Based on visual analysis of the photo, it can be concluded that the soybean plant in the image is suffering from Asian rust (Phakopsora pachyrhizi) infection. Asian rust is a fungal disease that primarily affects soybean plants and can cause serious damage to crops, resulting in significant production losses.</string>
    <string name="diagn_resul_title2">Identified characteristics:</string>
    <string name="diagn_resul_text2">Based on the photo analysis, it is recommended that the soybean producer take immediate measures to control Asian rust infection. Some possible measures include:</string>
    <string name="diagn_resul_text3">1. Brownish-red discoloration: The presence of brownish-red spots on the leaf is a classic symptom of Asian rust. This discoloration results from the activity of the fungus, which infects the plant cells and disrupts normal photosynthesis.</string>
    <string name="diagn_resul_text4">2. Orange pustules: The small orange pustules observed on the leaf surface are reproductive structures of the Asian rust fungus. These pustules contain spores that are released into the environment, favoring the spread of the disease to other plants.</string>
    <string name="diagn_resul_text5">3. Distribution on leaf margins and between veins: The presence of concentrated Asian rust spots mainly on the leaf margins and between veins is consistent with the characteristic infection pattern of this disease.</string>
    <string name="frag_home_text">AgroGenius is an artificial intelligence (AI) application designed to help farmers increase food production sustainably, assisting in the fight against world hunger and food scarcity. This application uses generative AI to analyze farm data and generate practical and specific advice to improve production efficiency and sustainability.</string>
    <string name="frag_home_title">Features:</string>
    <string name="frag_home_text2">1. Crop Diagnosis: Users can take photos of their crops, and the AI will analyze the image to identify possible diseases or nutritional deficiencies in the plants and suggest possible treatments or solutions.</string>
    <string name="frag_home_text3">2. Crop Forecast: Based on historical and current data on climate, soil, and other relevant factors, the generative AI can make predictions about crop production.</string>
    <string name="frag_home_text4">3. Scheduled Irrigation: Here, the farmer can schedule which crops to irrigate at specific times.</string>
    <string name="frag_irrig_title">Irrigation Control</string>
    <string name="frag_irrig_subtitle">Choose the crops to schedule irrigation for at 5:00 AM</string>
    <string name="frag_irrig_plant">Coffee Plantation</string>
    <string name="frag_irrig_plant2">Soybean Plantation</string>
    <string name="frag_irrig_plant3">Corn Plantation</string>
    <string name="frag_irrig_plant4">Wheat Plantation</string>
    <string name="frag_irrig_button">Confirm</string>
    <string name="frag_previ_title">Crop Forecast</string>
    <string name="frag_previ_subtitle">Choose one of your registered plantations</string>
    <string name="frag_previ_option">Coffee Plantation</string>
    <string name="frag_previ_option2">Soybean Plantation</string>
    <string name="frag_previ_button">Confirm</string>
    <string name="frag_prev_resul1_title">Crop Forecast for: Coffee Plantation</string>
    <string name="frag_prev_resul1_text">Considering recent meteorological data, it is observed that the Southeast region has experienced a period of climatic stability with well-defined seasons. The average temperature has remained within the ideal range for healthy coffee plant development, ranging from 20°C to 25°C, which favors the fruit maturation process. Rainfall has also occurred regularly, providing the necessary moisture for the plants without excess that could harm the harvest. Based on this information, favorable coffee harvests are expected in Minas Gerais in the near future.</string>
    <string name="frag_prev_resul2_title">Crop Forecast for: Soybean Plantation</string>
    <string name="frag_prev_resul2_text">Considering recent meteorological data, it is observed that the Southeast region has experienced a period of climatic stability with well-defined seasons. The average temperature has remained within the ideal range for healthy soybean plant development, ranging from 25°C to 30°C, which promotes growth and proper crop development. Rainfall has also occurred regularly, providing the necessary moisture for the plants without excess that could negatively affect crop development. Based on this information, favorable soybean harvests are expected in the Southeast region. Favorable climatic conditions, combined with appropriate agricultural techniques, have the potential to result in healthy soybean production with good yields.</string>
    <string name="frag_resul_irig_title">Summary of Irrigation Scheduling</string>
    <string name="nav_head_main_name">José Carlos</string>
    <string name="_head_main_email">josecarlos@gmail.com</string>
    <string name="irriga_o_programada">Scheduled Irrigation</string>
    <string name="diag_resul">Diagnostic Result</string>
    <string name="resul_for">Result Forecast</string>
    <string name="resul_for2">Result Forecast</string>
    <string name="irrig_contr">Irrigation Control</string>
    <string name="irrig_resul">Irrigation Result</string>

</resources>