<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="225dp"
            android:layout_height="215dp"
            android:src="@drawable/agrogeniuslogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/frag_home_text" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_home_title"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_home_text2" />

        <TextView
            android:id="@+id/textView14"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_home_text3" />

        <TextView
            android:id="@+id/textView15"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_home_text4" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>